_configmap.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: mypod2
spec:
  containers:
  - name: mypod
    image: nginx:alpine
    # command: ["echo", "HI"]
    volumeMounts:
    - name: config
      mountPath: "/usr/share/nginx/myconfig/"
      readOnly: true
  volumes:
  - name: config
    configMap:
      name: myconfigmap
      items:
      - key: "game.properties"
        path: "game.properties"
