_init_containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container
  labels:
    app.kubernetes.io/name: init-container
spec:
  containers:
  - name: app-c
    image: busybox:1.28
    command: ['sh', '-c', "echo App running! && sleep 3600"]
