_limits-mem-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-demo
  namespace: memory-example
spec:
  containers:
  - name: memory-demo-ctr
    image: polinux/stress
    resources:
      requests:
        memory: "10Mi"
      limits:
        memory: "20Mi"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]
