_run_as_ctr_capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secctx-caps
spec:
  containers:
  - name: secctx-caps-ctr
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        add: ["NET_ADMIN", "SYS_TIME"]
