_run_as_user_on_ctr.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secctx-on-container
spec:
  securityContext:
    runAsUser: 1000
  containers:
    - name: sec-ctx-demo-2
      image: gcr.io/google-samples/node-hello:1.0
      securityContext:
        runAsUser: 2000
        allowPrivilegeEscalation: false
