_secret_in_pod_volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-reader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mynginx
  template:
    metadata:
      labels:
        app: mynginx
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: newsecret
      containers:
      - name: nginx-with-secret
        image: nginx:1.23.4-alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secret-volume
          readOnly: true
          mountPath: "/thesecret/"
