_canary_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx
    # version: "1.0"
  ports:
    - port: 8888
      targetPort: 80
