_init_containers_reqs.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: initone
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9376
---
apiVersion: v1
kind: Service
metadata:
  name: inittwo
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9377
