_service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-node-port
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
